fix : add api squads
